--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'dagger.hilt.android.plugin'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id("com.google.gms.google-services")
 }
 
 android {
@@ -86,4 +87,8 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     implementation "androidx.hilt:hilt-navigation-fragment:1.0.0"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    //firebase
+    implementation(platform("com.google.firebase:firebase-bom:32.7.2"))
+    implementation 'com.google.firebase:firebase-auth-ktx'
 }
