--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ android {
         buildConfig = true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion '1.4.1'
     }
     packagingOptions {
         resources {
@@ -77,6 +77,9 @@ dependencies {
 
     // Coil
     implementation "io.coil-kt:coil-compose:2.2.2"
+
+    //splash
+    implementation 'androidx.core:core-splashscreen:1.0.1'
 
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
