--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,5 +95,6 @@ dependencies {
     //firebase
     implementation(platform("com.google.firebase:firebase-bom:32.7.2"))
     implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation("com.google.firebase:firebase-firestore")
     implementation("com.google.android.gms:play-services-auth:20.7.0")
 }
