--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,15 +21,18 @@
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.review.Splash">
+
+        </activity>
+        <activity android:name=".presentation.ui.LoginActivity"/>
+        <activity android:name=".presentation.ui.SignUpActivity"/>
+        <activity android:name=".presentation.ui.WritingActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.ui.LoginActivity"/>
-        <activity android:name=".presentation.ui.SignUpActivity"/>
-        <activity android:name=".presentation.ui.WritingActivity"/>
     </application>
 
 </manifest>
