--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
             android:exported="true">
 
         </activity>
+        <activity android:name=".presentation.ui.ArticleActivity"/>
     </application>
 
 </manifest>
